removed background hover effects from links

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -3,5 +3,9 @@ footer .text-small {
 }
 
 a {
-  background: none;
+  background: none !important;
+
+  &:hover {
+    background: none !important;
+  }
 }
