fixed link highlighting

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -3,9 +3,9 @@ footer .text-small {
 }
 
 a {
-  background: none !important;
-
+  background: none;
   &:hover {
-    background: none !important;
+    color: #7db5ff;
+    background: none;
   }
 }
