added padding to intro label

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -8,5 +8,6 @@ footer .text-small {
 
 .navigation-list-item:first-child {
   margin-bottom: 1rem;
+  padding-bottom: 0.5rem;
   border-bottom: 1px solid #44434d;
 }
