--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -11,3 +11,8 @@ footer .text-small {
   padding-bottom: 0.5rem;
   border-bottom: 1px solid #44434d;
 }
+
+.navigation-list-child-list .navigation-list-item {
+  margin-bottom: 0;
+  border-bottom: none;
+}
