positioned emoji bulb

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -14,5 +14,7 @@ footer .text-small {
     content: "💡";
     position: absolute;
     right: 100%;
+    top: 0.25rem;
+    margin-right: 0.25rem;
   }
 }
