hiding emoji in small displays

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -18,3 +18,18 @@ footer .text-small {
     margin-right: 0.25rem;
   }
 }
+
+@media all and (max-width: 800px) {
+  .navigation-list > .navigation-list-item:first-child {
+    margin-bottom: 0.5rem;
+    position: relative;
+
+    &:before {
+      content: "💡";
+      position: absolute;
+      right: 100%;
+      top: 0.25rem;
+      margin-right: 0.25rem;
+    }
+  }
+}
